# backend

./: manage.py  pyproject.toml  test.py  test2  test2.py
capitania/: .gitignore  settings.py  urls.py  wsgi.py
capitania/apps/: wsgi.py
capitania/apps/api/: schema.py  search.py  urls.py
capitania/apps/api/mutations/: PinarDelRio.py  UpdateEmbarcacion.py  UpdateName.py  UpdateTransporte.py  auth.py  getClientFromId.py  getUser.py  registeredClient.py  reviews.py  searches.py  shipment.py
capitania/apps/api/queries/: Artemisa.py  Camaguey.py  CiegoDeAvila.py  Cienfuegos.py  Granma.py  Guantanamo.py  Holguin.py  InfogestiContributors.py  IslaDeLaJuventud.py  LaHabana.py  LasTunas.py  Matanzas.py  Mayabeque.py  PinarDelRio.py  RepeatedPlates.py  Reviews.py  SantiagoDeCuba.py  SanticEspiritud.py  Vehiculo.py  VillaClara.py  addresses.py  deleteRecords.py  shipment.py  test.py  users.py
capitania/apps/api/types/: adresses.py  infogestiShipement.py  provincias.py  reviews.py  shipment.py  users.py  vehiculo.py
capitania/apps/core/: models.py
capitania/apps/core/migrations/: 0001_initial.py  0002_auto_20210608_1623.py  0002_infogestishipment.py  0003_auto_20210316_1002.py  0003_auto_20210608_1649.py  0004_auto_20210316_1006.py  0004_auto_20210611_1134.py  0005_auto_20210316_1034.py  0005_auto_20210611_1618.py  0006_auto_20210316_1037.py  0006_delete_lahabana.py  0007_auto_20210316_1037.py  0007_delete_vehiculo.py  0008_auto_20210316_1040.py  0008_lahabana_vehiculo.py  0009_cliente.py  (+8 more)
capitania/apps/fixtures/: cities.json  countries.json  states.json
